hphp/hack/test/typecheck/variadic_args4.php.exp
File "variadic_args4.php", line 7, characters 7-8:
Class C2 does not correctly implement all required methods  (Typing[4042])
File "variadic_args4.php", line 7, characters 18-19:
Some methods are incompatible with those declared in type C1
Read the following to see why:
File "variadic_args4.php", line 8, characters 19-22:
Member meth has the wrong type
File "variadic_args4.php", line 8, characters 19-22:
Should have a variadic argument
File "variadic_args4.php", line 4, characters 19-22:
Because of this definition
